# taotie

./: Cargo.toml  _typos.toml  cliff.toml  deny.toml
assets/: sample.parquet  users.ndjson
examples/: arrow-serde.rs  ndjson.rs  pq.rs  repl.rs
notebook/: README.md  pyproject.toml  taotie.ipynb
src/: lib.rs  main.rs
src/backend/fusion/: describe.rs  df_describe.rs  mod.rs
src/cli/: connect.rs  describe.rs  head.rs  list.rs  mod.rs  schema.rs  sql.rs
