[package]
name = "template"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.92"
arrow = { version = "53.2.0", features = ["prettyprint"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
crossbeam-channel = "0.5.13"
datafusion = { version = "43.0.0", features = ["serde"] }
dirs = "5.0.1"
parquet = "53.2.0"
polars = { version = "0.44.2", features = [
    "lazy",
    "parquet",
    "polars-io",
    "sql",
    "timezones",
] }
reedline-repl-rs = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
